# nvme_spec_analysis

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.txt  build.bat  coverage.bat  default.profraw  main.cpp  prompt_test
.claude/: settings.local.json
.claude/agents/: build-validator.md  code-implementer.md  requirement-to-test-scenario-writer.md  requirements-analyzer.md  spec-to-requirement-analyzer.md  test-designer.md  test-implementer.md  traceability-mapper.md  workflow-orchestrator.md  workflow-resume.md  workflow-status.md  workflow-validator.md
DataFolder/: 5.1.1 Abort - Command Dword.md  5.1.1 Abort - Command Specific Status Values.md  5.1.1 Abort - Completion Queue Entry Dword 0.md  5.1.10 Format NVM - Command Dword.md  5.1.10 Format NVM - Command Specific Status Values.md  5.1.11 Get Features - Command Dword.md  5.1.11 Get Features - Completion Queue Entry Dword 0.md  5.1.12 Get Log Page - Command Dword.md  5.1.13 Identify - Command Dword.md  5.1.16 Migration Receive - Command Dword.md  5.1.16 Migration Receive - Command Specific Status Values.md  5.1.17 Migration Send - Command Dword.md  5.1.17 Migration Send - Command Specific Status Values.md  5.1.2 Asynchronous Event Request - Command Specific Status Values.md  5.1.2 Asynchronous Event Request - Completion Queue Entry Dword 0.md  5.1.2 Asynchronous Event Request - Completion Queue Entry Dword 1.md  5.1.20 Namespace Attachment - Command Dword.md  5.1.20 Namespace Attachment - Command Specific Status Values.md  5.1.21 Namespace Management - Command Dword.md  5.1.21 Namespace Management - Command Specific Status Values.md  5.1.21 Namespace Management - Completion Queue Entry Dword 0.md  5.1.22 Sanitize - Command Dword.md  5.1.22 Sanitize - Command Specific Status Values.md  5.1.23 Security Receive - Command Dword.md  5.1.24 Security Send - Command Dword.md  5.1.25 Set Features - Command Dword.md  5.1.3 Capacity Management - Command Dword.md  5.1.3 Capacity Management - Command Specific Status Values.md  5.1.3 Capacity Management - Completion Queue Entry Dword 0.md  5.1.4 Controller Data Queue - Command Dword.md  5.1.4 Controller Data Queue - Command Specific Status Values.md  5.1.4 Controller Data Queue - Completion Queue Entry Dword 0.md  5.1.5 Device Self-test - Command Dword.md  5.1.5 Device Self-test - Command Specific Status Values.md  5.1.6 Directive Receive - Command Dword.md  5.1.7 Directive Send - Command Dword.md  5.1.8 Firmware Commit - Command Dword.md  5.1.8 Firmware Commit - Command Specific Status Values.md  5.1.8 Firmware Commit - Completion Queue Entry Dword 0.md  5.1.9 Firmware Image Download - Command Dword.md  (+1 more)
docs/implementation/: IMPLEMENTATION_SUMMARY.md  firmware_image_download_test_impl.md  lockdown_test_impl.md
docs/requirements/: firmware_image_download_requirements.md  lockdown_requirements.md  namespace_management_cdw.csv  namespace_management_enums.csv  namespace_management_info.csv  namespace_management_requirements.csv
docs/test-design/: firmware_image_download_test_design.md  lockdown_test_design.md
docs/test-scenarios/: firmware_image_download_test_scenarios.md  lockdown_test_scenarios.md
docs/traceability/: firmware_image_download_traceability.md  lockdown_traceability.md
header/: NVMeDevice.cpp  nvme.h  nvme_abort.h  nvme_async_event_request.h  nvme_capacity_management.h  nvme_controller_data_queue.h  nvme_device_self_test.h  nvme_directive_receive.h  nvme_directive_send.h  nvme_firmware_commit.h  nvme_firmware_image_download.h  nvme_format_nvm.h  nvme_get_features.h  nvme_get_log_page.h  nvme_identify.h  nvme_keep_alive.h  nvme_lockdown.h  nvme_migration_receive.h  nvme_migration_send.h  nvme_namespace_attachment.h  nvme_namespace_management.h  nvme_nvm_commands.h  nvme_pcie_admin_commands.h  nvme_sanitize.h  nvme_security.h  nvme_set_features.h
src/: NVMeDevice.cpp
test/: FirmwareTest.cpp  FormatNVMTest.cpp  GetLogPageTest.cpp  GetSetFeaturesTest.cpp  IdentifyTest.cpp  LockdownTest.cpp  MiscCommandsTest.cpp  NVMeDeviceTest.cpp  NamespaceManagementTest.cpp  NvmCommandsTest.cpp  QueueManagementTest.cpp  SanitizeTest.cpp  StructureSizeTest.cpp  VirtualizationManagementTest.cpp  main.cpp
